added gif search

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,11 @@
-<!-- show a gif passed from the route -->
-<img src="{{gifUrl}}">
+<form action="/" method="GET">
+  <input type="text" name="term">
+  <button type="submit">Search</button>
+</form>
+
+{{#each gifs}}
+  <div class="tenor-gif-embed" data-postid="{{this.id}}" data-share-method="host" data-width="300px" data-height="300px">
+    <a href="{{this.url}}"></a>
+  </div>
+  <script type="text/javascript" src="https://tenor.com/embed.js"></script>
+{{/each}}
