--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,16 @@
-<form action="/" method="GET">
-  <input type="text" name="term">
-  <button type="submit">Search</button>
-</form>
+<header>
+  <h1>Gif Search</h1>
+  <form action="/" method="GET">
+    <input type="text" name="term">
+    <button type="submit">Search</button>
+  </form>
+</header>
 
-{{#each gifs}}
-  <div class="tenor-gif-embed" data-postid="{{this.id}}" data-share-method="host" data-width="300px" data-height="300px">
-    <a href="{{this.url}}"></a>
-  </div>
-  <script type="text/javascript" src="https://tenor.com/embed.js"></script>
-{{/each}}
+<div class="gifs">
+  {{#each gifs}}
+    <div class="tenor-gif-embed" data-postid="{{this.id}}" data-share-method="host" data-width="300px" data-height="300px">
+      <a href="{{this.url}}"></a>
+    </div>
+    <script type="text/javascript" src="https://tenor.com/embed.js"></script>
+  {{/each}}
+</div>
