--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Gif Search</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Gif Search</h1>
     {{{body}}}
   </body>
 </html>
